--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,15 @@
 <!--[if IE 9 ]>    <html class="ie9 <%= @bodyId %>"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="<%= @bodyId %>"> <!--<![endif]-->
 <head>
-  <title>Harry&#8217;s &ndash; Tell Friends, Shave for Free</title>
+  <title>Drylab</title>
   <link rel="icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
   <link rel="shortcut icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
 
-  <meta property="og:title" content="Harry’s is coming!"/>
-  <meta property="og:description" content="Shaving is evolving. Didn’t want to leave you all behind. Check out Harry’s here."/>
+  <meta property="og:title" content="Drylab 3 is coming!"/>
+  <meta property="og:description" content="Say hello to a new standard. Say good bye to loosing overview and golden takes."/>
   <meta property="og:image" content="<%= asset_path("refer/truman.png") %>"/>
   <meta property="og:url" content="<%= root_url %>"/>
+  <meta property="og:description" content="Stay Curious. Create Better."/>
   <% if @is_mobile %>
     <% if @bodyId == 'home' %>
       <meta name="viewport" content="width=1600" />
