--- a/app/views/users/refer.html.erb
+++ b/app/views/users/refer.html.erb
@@ -1,24 +1,21 @@
 <div class="header">
-  <div class="content">
-    <p class="logo brandon">Harry&#8217;s</p>
-    <p class="byline brandon">THANK YOU FOR SIGNING UP</p>
-  </div>
+  <p class="logo brandon">Drylab</p>
+  <p class="byline brandon">THANK YOU FOR SIGNING UP</p>
 </div>
 
 <div class="hero">
   <div class="page-content clearfix">
     <div class="mammoth">
-      <span class="need brandon">Shaving Is<br>Evolving</span>
+      <span class="need brandon">Film-making<br>Is Evolving</span>
     </div>
     <div class="share-wrap">
       <p class="why brandon">Don't leave your friends behind</p>
-      <p class="title brandon">INVITE FRIENDS &<br>Earn Product</p>
-      <p class="subtitle brandon">Share your unique link via email, Facebook<br>or Twitter and earn Harry's goods for<br>each friend who signs up.</p>
+      <p class="title brandon">INVITE FRIENDS &<br>Earn free use</p>
+      <p class="subtitle brandon">Share this unique link via e-mail, Facebook,<br>handwritten note or other preferred media, and get $200 for every 5 friends who signs up, to use on your first production.</p>
       <div class="copy-link brandon"><%= root_url %>?ref=<%= @user.referral_code %></div>
-      <% twitter_message = "#Shaving is evolving. Excited for @harrys to launch." %>
+      <% twitter_message = "#Film-making is evolving. Excited for @drylab 3 to launch." %>
       <div class="social-links">
-        <a href="http://www.facebook.com/sharer/sharer.php?u=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&title=Harrys" class="fb" target="_blank"></a>
-        <div class="sep"></div>
+        <a href="http://www.facebook.com/sharer/sharer.php?u=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&title=Drylab" class="fb" target="_blank"></a>
         <a href="http://twitter.com/share?url=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&text=<%= CGI::escape(twitter_message) %>" class="twit" target="_blank"></a>
       </div>
     </div>
@@ -45,7 +42,7 @@
   <div class="page-content">
     <p class="callout brandon">Here's How It Works:</p>
     <ul class="products clearfix">
-      <li class="title brandon"><p class="friends">Friends Joined</p><p class="rewards">Harry's Product</p></li>
+      <li class="title brandon"><p class="friends">Friends Joined</p><p class="rewards">Prizes</p></li>
       <% stops.each do |stop| %>
         <li class="product brandon <% if stop["selected"] %>selected<% end %> <% if stop["class"] == 'five' %>last<% end %>">
           <div class="circle"><%= stop["count"] %></div>
@@ -80,8 +77,6 @@
       <p class="place brandon"><span><%= referrals_count %></span> <%= words %> joined</p>
     <% end %>
     <p class="check brandon">Keep checking</p>
-
-    <p class="ship brandon">We ship to the U.S. (& Canada Soon)</p>
     <a class="policy brandon" href="/privacy-policy" target="_blank">Privacy Policy</a>
   </div>
 </div>
