rwd, progress prize line, changes video and ipad (#2)
* rwd, progress prize line, changes video and ipad

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,29 @@
+@import "variables";
 @import "reset";
 @import "bootstrap";
 @import "core";
 @import "users";
+
+@font-face {
+  font-family: "AvantGarde";
+  src: font-url("ITCAvantGardeGothicMedium.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "AvantGarde";
+  src: url("ITCAvantGardeGothicMediumOblique.otf");
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "AvantGarde";
+  src: url("ITCAvantGardeGothicBold.otf");
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "AvantGarde";
+  src: url("ITCAvantGardeGothicBoldOblique.otf");
+  font-weight: bold;
+  font-style: italic;
+}
