--- a/app/assets/stylesheets/_core.scss
+++ b/app/assets/stylesheets/_core.scss
@@ -2,34 +2,19 @@ form {
   margin-bottom: 0;
 }
 
-.clearfix:before,
-.clearfix:after {
-  content: " "; /* 1 */
-  display: table; /* 2 */
-}
-
-.clearfix:after {
-  clear: both;
+html,
+body {
+  background-color: #31292a;
+  margin: 0;
+  padding: 0;
 }
 
 /* Home */
 
-html.home {
-  background: #31292a;
-}
-
-#home {
-  padding-bottom: 50px;
-}
-
-#home .page-content {
-  width: 1400px;
-  margin: 0 auto;
-}
-
 #home .hero {
   width: 100%;
-  height: 700px;
+  min-height: 700px;
+  height: 80%;
   background: image-url("home/hero.jpg") center center no-repeat;
   background-size: cover;
   overflow: hidden;
@@ -41,21 +26,37 @@ html.home {
 #home .hero .flex-cont {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 100%;
   position: absolute;
   top: 25%;
+  margin: 0 20px;
 }
 
 #home .hero .flex-item {
-  text-align: center;
-  flex: 1;
+  margin: 0 20px;
+}
+
+#home .hero .flex-item .ipad-mock {
+  background: image-url("home/ipad.png") center center no-repeat;
+  min-height: 310px;
+  min-width: 420px;
+  background-size: contain;
+}
+
+#home .hero .flex-item .video {
+  height: 277px;
+  object-fit: cover;
+  position: relative;
+  top: 12px;
+  right: -42px;
 }
 
 #home .hero .large {
+  text-align: center;
   font-weight: bold;
-  font-size: 45px;
+  font-size: 35px;
   color: #fff;
   position: relative;
   z-index: 2;
@@ -68,10 +69,9 @@ html.home {
 }
 
 #home .hero .small {
-  font-weight: bold;
   color: #fff;
-  font-size: 23px;
-  line-height: 30px;
+  font-size: 15px;
+  line-height: 15px;
   position: relative;
   z-index: 2;
   letter-spacing: 1px;
@@ -80,25 +80,38 @@ html.home {
 #home .form-wrap {
   height: 80px;
   width: 411px;
-  margin: 23px auto 0;
+  margin: 2em auto;
 }
 
 #home .form-wrap .key {
-  width: 46px;
-  height: 19px;
+  width: 100px;
+  height: 30px;
   margin: 0 auto;
   background: image-url("home/key.png") 0 0 no-repeat;
-  background-size: 46px 19px;
+  background-size: 100px 30px;
+  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(250, 250, 250, 0.25)));
+}
+
+#home .form-wrap .logo {
+  line-height: 29px;
+  background: image-url("refer/logo.png") 0 0 no-repeat;
+  background-size: 30px 29px;
+  height: 30px;
+  width: 300px;
+  position: absolute;
+  left: 20px;
+  color: #fff;
+  padding: 0px 0 0 45px;
+  font-size: 14px;
 }
 
 #home .form-wrap .byline {
-  font-size: 15px;
+  font-size: 20px;
   text-transform: uppercase;
   color: #fff;
   text-align: center;
-  font-weight: bold;
   letter-spacing: 2px;
-  margin: 15px 0;
+  margin: 5px 0;
 }
 
 #home .form-wrap .email {
@@ -109,9 +122,11 @@ html.home {
   width: 256px;
   outline: none;
   letter-spacing: 1px;
+  border-radius: 3px;
 }
 
 #home .form-wrap .submit {
+  text-shadow: 1px 2px 1px #000;
   width: 143px;
   background: linear-gradient(#628ae2, #4568c5);
   float: left;
@@ -237,6 +252,58 @@ html.home {
   text-align: center;
 }
 
+@media (max-width: $screen-md-max) {
+  #home {
+    min-width: 275px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #home .hero .flex-cont {
+    top: 2%;
+  }
+
+  #home .hero .small-wrap {
+    padding-bottom: 2%;
+  }
+}
+
+@media (max-width: $screen-sm-max) {
+  #home {
+    min-width: 275px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #home .hero .flex-cont {
+    top: 0%;
+  }
+
+  #home .hero .small-wrap {
+    padding-bottom: 2%;
+  }
+
+  #home .form-wrap .logo {
+    display: none;
+  }
+}
+
+@media (max-width: $screen-xs-max) {
+  #home {
+    min-width: 411px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #home .hero .flex-cont {
+    top: 0%;
+  }
+
+  #home .hero .small-wrap {
+    padding-bottom: 0%;
+  }
+}
+
 /* Refer a friend page */
 
 .wf-loading .brandon {
@@ -244,21 +311,14 @@ html.home {
 }
 
 .brandon {
-  font-family: "Brandon Grotesque", "brandon-grotesque", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
+  font-family: "AvantGarde", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
 }
 
 #refer {
   background: #fff;
 }
 
-#refer .page-content {
-  width: 1120px;
-  margin: 0 auto;
-  z-index: 0;
-  position: relative;
-}
-
-#refer .header {
+.header {
   height: 50px;
   background: #15122b;
   width: 100%;
@@ -267,12 +327,12 @@ html.home {
   position: relative;
 }
 
-#refer .header .content {
+.header .content {
   width: 315px;
   margin: 0 auto;
 }
 
-#refer .header p {
+.header p {
   float: left;
   color: #fff;
   font-weight: 500;
@@ -280,29 +340,32 @@ html.home {
   line-height: 50px;
 }
 
-#refer .header .byline {
+.header .byline {
   font-size: 14px;
+  color: #fff;
+  line-height: 50px;
+  vertical-align: middle;
+  text-align: center;
 }
 
-#refer .header .logo {
+.header .logo {
   font-weight: normal;
-  font-size: 0;
-  line-height: 0;
+  line-height: 50px;
   margin-right: 14px;
   letter-spacing: 1px;
   background: image-url("refer/logo.png") 0 0 no-repeat;
   background-size: 30px 29px;
   height: 29px;
-  width: 106px;
-  margin-top: 10px;
-  margin: 10px 15px auto 30px;
+  width: 50px;
+  margin: 10px 0 0 15px;
 }
 
 #refer .hero {
-  background: image-url("refer/mammoth.jpg") center center no-repeat;
   background-size: cover;
   width: 100%;
-  height: 500px;
+  height: 80%;
+  min-height: 470px;
+  background: image-url("refer/mammoth.jpg") center center no-repeat;
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -310,25 +373,29 @@ html.home {
   margin: 0 auto;
 }
 
-#refer .mammoth {
-  width: 612px;
-  height: 394px;
-  overflow: hidden;
-  margin-top: 15px;
-  float: left;
+#refer .hero .flex-cont {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: absolute;
+  margin: 0 5px;
 }
 
-#refer .mammoth .need {
-  color: #fff;
-  font-size: 38px;
-  text-transform: uppercase;
-  font-weight: bold;
-  margin: 102px 0 0 72px;
-  display: block;
-  line-height: 56px;
-  letter-spacing: 4px;
+#refer .hero .flex-item {
+  margin: 0 5%;
+}
+
+#refer .hero .flex-item .title {
   text-align: center;
-  width: 284px;
+  font-weight: bold;
+  font-size: 35px;
+  color: #fff;
+  position: relative;
+  z-index: 2;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
 
 #refer .share-wrap {
@@ -391,16 +458,26 @@ html.home {
 
 #refer .share-wrap .social-links .fb {
   background: image-url("refer/fb.png");
-  background-size: 27px 27px;
-  width: 27px;
-  height: 27px;
+  background-size: 32px 32px;
+  width: 32px;
+  height: 32px;
+  border-radius: 3px;
 }
 
 #refer .share-wrap .social-links .twit {
   background: image-url("refer/twit.png");
-  background-size: 27px 27px;
-  width: 27px;
-  height: 27px;
+  background-size: 32px 32px;
+  width: 32px;
+  height: 32px;
+  border-radius: 3px;
+}
+
+#refer .share-wrap .social-links .linkedin {
+  background: image-url("refer/linkedin.png");
+  background-size: 32px 32px;
+  width: 32px;
+  height: 32px;
+  border-radius: 3px;
 }
 
 #refer .prizes {
@@ -410,27 +487,22 @@ html.home {
   padding-bottom: 100px;
 }
 
-#refer .prizes .page-content {
-  position: relative;
-}
-
 #refer .prizes .callout {
   text-align: center;
-  font-size: 16px;
-  color: #074e6f;
-  font-weight: bold;
+  font-size: 14px;
+  color: #050026;
   margin: 20px 0 0 0;
   letter-spacing: 2px;
-  text-transform: uppercase;
 }
 
 #refer .prizes .progress {
-  height: 4px;
-  width: 100%;
-  background: image-url("refer/progress-bg.png") 0 0 repeat-x;
-  background-size: 1px 4px;
-  position: absolute;
-  top: 100px;
+  height: 6px;
+  width: 90%;
+  margin: 0 5%;
+  background-color: #050026;
+  border-radius: 3px;
+  background-size: 1px 6px;
+  position: relative;
   z-index: 0;
 }
 
@@ -441,44 +513,59 @@ html.home {
 }
 
 #refer .prizes .progress .mover .bar {
-  background: image-url("refer/progress-done.png") 0 0 repeat-x;
-  width: 165px;
+  display: block;
   height: 4px;
-  -webkit-background-size: 1px 4px;
-  background-size: 1px 4px;
+  width: 11.1%;
+  background-color: #f59228;
+}
+
+#refer .prize-zero .progress .mover .bar {
+  display: block;
+  height: 4px;
+  width: 11.1%;
+  background-color: #f59228;
+}
+
+#refer .prize-one .progress .mover .bar {
+  width: 12.5%;
 }
 
 #refer .prize-two .progress .mover .bar {
-  width: 312px;
+  width: 25%;
 }
+
 #refer .prize-three .progress .mover .bar {
-  width: 566px;
+  width: 37.5%;
 }
+
 #refer .prize-four .progress .mover .bar {
-  width: 820px;
+  width: 50%;
 }
+
 #refer .prize-five .progress .mover .bar {
-  width: 1120px;
+  width: 62.5%;
+}
+
+#refer .prize-six .progress .mover .bar {
+  width: 75%;
+}
+
+#refer .prize-seven .progress .mover .bar {
+  width: 87.5%;
+}
+
+#refer .prize-eight .progress .mover .bar {
+  width: 100%;
 }
 
 #refer .prizes ul.products {
-  height: 105px;
-  width: 100%;
-  margin-top: 30px;
+  display: flex;
+  flex-wrap: nowrap;
+  // justify-content: space-between;
+  width: 90%;
+  margin: 20px 5%;
   position: relative;
   z-index: 1;
-}
-
-#refer .prizes .products li.title {
-  height: 100%;
-  text-transform: uppercase;
-  color: #074e6f;
-  font-weight: 500;
-  font-size: 14px;
-  float: left;
-  margin-right: 68px;
-  width: 165px;
-  font-weight: bold;
 }
 
 #refer .prizes .products li.title .friends {
@@ -493,41 +580,62 @@ html.home {
 
 #refer .prizes .products li.product {
   height: 100%;
-  color: #074e6f;
-  width: 125px;
-  margin-right: 129px;
+  color: #050026;
+  width: 11%;
   float: left;
   position: relative;
 }
 
 #refer .prizes .products li.product .circle {
-  height: 30px;
-  width: 30px;
-  border-radius: 15px;
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
   border: 1px solid #dad9d2;
   text-align: center;
-  line-height: 30px;
-  color: #868282;
+  line-height: 38px;
+  vertical-align: middle;
+  color: #fff;
   overflow: hidden;
-  background: #f1f0ee;
-  font-weight: bold;
+  background: #050026;
   margin: 0 auto;
+  font-size: 14px;
 }
 
 #refer .prizes .products li.product .sep {
-  width: 12px;
-  height: 2px;
-  background: transparent;
+  width: 100%;
+  height: 4px;
+  background-color: #050026;
   margin: 13px auto 13px;
 }
 
-#refer .prizes .products li.product .caret {
+#refer .prizes .products li.product.selected .sep {
+  width: 100%;
+  height: 4px;
+  background-color: #f59228;
+  margin: 13px auto 13px;
+}
+
+#refer .prizes .z li.product .caret {
   width: 100%;
   height: 10px;
   background: image-url("refer/caret.png") center center no-repeat;
   background-size: 16px 10px;
   position: absolute;
   bottom: -15px;
+}
+
+#refer .prizes .products li.product .description {
+  display: none;
+  color: #050026;
+  font-size: 14px;
+  text-align: center;
+}
+
+#refer .prizes .products li.product.selected .description {
+  display: block;
+  color: #f59228;
+  font-size: 14px;
+  text-align: center;
 }
 
 #refer .prizes .products li.product.selected .caret {
@@ -537,64 +645,30 @@ html.home {
 
 #refer .prizes .products li.product p {
   text-align: center;
-  font-weight: 500;
-}
-
-#refer .prizes .products li.product:last-child {
-  margin-right: 0;
-}
-
-#refer .prizes .products li.product.last {
-  margin-right: 0;
+  font-size: 14px;
 }
 
 #refer .prizes .products li.product.selected .circle {
-  background: #995f5e !important;
-  border-color: #995f5e !important;
-  color: #fff !important;
+  background: #f59228 !important;
+  border-color: #f59228 !important;
+  color: #000 !important;
 }
 
 #refer .prizes .products li.product.selected p {
-  color: #995f5e !important;
-}
-
-#refer .prizes .products li.product:hover .circle {
-  color: #fff;
-  background: #074e6f;
-  border-color: #074e6f;
-}
-
-#refer .prizes .products li.product .tooltip {
-  height: 254px;
-  width: 190px;
-  border: 4px solid #074e6f;
-  position: absolute;
-  top: -285px;
-  left: -32px;
-  display: none;
-  background: #fff;
-}
-
-#refer .prizes .products li.product .tooltip img {
-  margin: 0 auto;
-  display: block;
-}
-
-#refer .prizes .products li.product:hover .tooltip {
-  display: block;
+  color: #f59228 !important;
 }
 
 #refer .prizes p.place {
   text-align: center;
   font-size: 16px;
-  color: #074e6f;
+  color: #050026;
   width: 100%;
   font-weight: 500;
   margin-top: 30px;
 }
 
 #refer .prizes p.place span {
-  color: #995f5e;
+  color: #f59228;
 }
 
 #refer .prizes p.check {
@@ -624,62 +698,4 @@ html.home {
   margin-top: 5px;
   display: block;
   text-decoration: none;
-}
-
-/*
-	RETINA
-*/
-@media only screen and (min--moz-device-pixel-ratio: 2),
-  only screen and (-o-min-device-pixel-ratio: 2/1),
-  only screen and (-webkit-min-device-pixel-ratio: 2),
-  only screen and (min-device-pixel-ratio: 2) {
-  #home .hero {
-    background: image-url("home/hero.jpg") center center no-repeat;
-    background-size: 100% 700px;
-  }
-
-  #home .form-wrap .key {
-    background: image-url("home/key.png") 0 0 no-repeat;
-    background-size: 46px 19px;
-  }
-
-  #refer .header .logo {
-    background: image-url("refer/logo.png") 0 0 no-repeat;
-    background-size: 106px 19px;
-  }
-
-  #refer .mammoth {
-    background: image-url("refer/mammoth.png") 0 0 no-repeat;
-    background-size: 610px 394px;
-  }
-
-  #refer .share-wrap .social-links .fb {
-    background: image-url("refer/fb@2x.png");
-    background-size: 27px 27px;
-  }
-
-  #refer .share-wrap .social-links .twit {
-    background: image-url("refer/twit@2x.png");
-    background-size: 27px 27px;
-  }
-
-  #refer .prizes .progress {
-    background: image-url("refer/progress-bg@2x.png") 0 0 repeat-x;
-    background-size: 1px 4px;
-  }
-
-  #refer .prizes .progress .mover .bar {
-    background: image-url("refer/progress-done@2x.png") 0 0 repeat-x;
-    background-size: 1px 4px;
-  }
-
-  #refer .prizes .products li.product .caret {
-    background: image-url("refer/caret@2x.png") center center no-repeat;
-    background-size: 16px 10px;
-  }
-
-  #refer .prizes .products li.product.selected .caret {
-    background: image-url("refer/caret-selected@2x.png") center center no-repeat;
-    background-size: 16px 10px;
-  }
 }
