--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <title>Drylab</title>
   <link rel="icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
   <link rel="shortcut icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Drylab 3 is coming!"/>
   <meta property="og:description" content="Say hello to a new standard. Say good bye to loosing overview and golden takes."/>
   <meta property="og:image" content="<%= asset_path("refer/truman.png") %>"/>
