--- a/app/views/users/refer.html.erb
+++ b/app/views/users/refer.html.erb
@@ -1,22 +1,32 @@
 <div class="header">
-  <p class="logo brandon">Drylab</p>
-  <p class="byline brandon">THANK YOU FOR SIGNING UP</p>
+  <p class="logo brandon"></p>
+  <p class="brandon">
+    Drylab
+  </p>
+  <% flash.each do |name, msg| %>
+    <% if msg.present? %>
+      <%= content_tag :div, msg, class: "byline brandon" %>
+    <% end %>
+  <% end %>
 </div>
 
 <div class="hero">
-  <div class="page-content clearfix">
-    <div class="mammoth">
-      <span class="need brandon">Film-making<br>Is Evolving</span>
+  <div class="flex-cont">
+    <div class="flex-item">
+      <p class="title">Film-making is <br /> evolving!</p>
     </div>
-    <div class="share-wrap">
-      <p class="why brandon">Don't leave your friends behind</p>
-      <p class="title brandon">INVITE FRIENDS &<br>Earn free use</p>
-      <p class="subtitle brandon">Share this unique link via e-mail, Facebook,<br>handwritten note or other preferred media, and get $200 for every 5 friends who signs up, to use on your first production.</p>
-      <div class="copy-link brandon"><%= root_url %>?ref=<%= @user.referral_code %></div>
-      <% twitter_message = "#Film-making is evolving. Excited for @drylab 3 to launch." %>
-      <div class="social-links">
-        <a href="http://www.facebook.com/sharer/sharer.php?u=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&title=Drylab" class="fb" target="_blank"></a>
-        <a href="http://twitter.com/share?url=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&text=<%= CGI::escape(twitter_message) %>" class="twit" target="_blank"></a>
+    <div class="flex-item">
+      <div class="share-wrap">
+        <p class="why brandon">Don't leave your friends behind</p>
+        <p class="title brandon">INVITE FRIENDS &<br>Earn free use</p>
+        <p class="subtitle brandon">Share this unique link via e-mail, Facebook,<br>handwritten note or other preferred media, and get $100 for every 5 friends who signs up, to use on your first purchase*.</p>
+        <div class="copy-link brandon"><%= root_url %>?ref=<%= @user.referral_code %></div>
+        <% twitter_message = "#Film-making is evolving. Excited for @drylab 3 to launch." %>
+        <div class="social-links">
+          <a href="https://www.facebook.com/sharer/sharer.php?u=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&title=Drylab" class="fb" target="_blank"></a>
+          <a href="https://twitter.com/share?url=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&text=<%= CGI::escape(twitter_message) %>" class="twit" target="_blank"></a>
+          <a href="https://www.linkedin.com/shareArticle?mini=true&url=<%= root_url %>?ref=<%= @user.referral_code %>" title="Drylab 3 is coming" class="linkedin" target="_blank"></a>
+        </div>
       </div>
     </div>
   </div>
@@ -30,7 +40,7 @@
   found = nil
 
   stops.reverse_each { |stop|
-    if stop["count"] <= referrals_count and !found
+    if stop["count"] <= referrals_count
       stop["selected"] = true
       found = stop
     else
@@ -38,45 +48,38 @@
     end
   }
 %>
+
+<%
+  words = ''
+  if referrals_count == 1
+    words = 'friend has'
+  else
+    words = 'friends have'
+  end
+%>
+
+
 <div class="prizes <% if found %>prize-<%= found["class"] %><% end %>">
   <div class="page-content">
-    <p class="callout brandon">Here's How It Works:</p>
+
+
+    <% if referrals_count == 0 %>
+      <p class="place brandon"><span>No</span> friends have joined...Yet!</p>
+    <% else %>
+      <p class="place brandon"><span><%= referrals_count %></span> <%= words %> signed up - You have earned <span> <%= found["prize"] %> USD free use! </span></p>
+    <% end %>
+    <p class="callout brandon">So many people to tell, so little time</p>
     <ul class="products clearfix">
-      <li class="title brandon"><p class="friends">Friends Joined</p><p class="rewards">Prizes</p></li>
       <% stops.each do |stop| %>
         <li class="product brandon <% if stop["selected"] %>selected<% end %> <% if stop["class"] == 'five' %>last<% end %>">
           <div class="circle"><%= stop["count"] %></div>
           <div class="sep"></div>
           <p><%= stop["html"].html_safe %></p>
-
-          <div class="tooltip">
-            <img src="<%= stop["image"] %>" height="254">
+          <div class="description">
+            <%= stop["description"].html_safe %>
           </div>
         </li>
       <% end %>
     </ul>
-
-    <div class="progress">
-      <div class="mover">
-        <div class="bar clearfix"></div>
-      </div>
-    </div>
-
-    <%
-      words = ''
-      if referrals_count == 1
-        words = 'friend has'
-      else
-        words = 'friends have'
-      end
-    %>
-
-    <% if referrals_count == 0 %>
-      <p class="place brandon"><span>No</span> friends have joined...Yet!</p>
-    <% else %>
-      <p class="place brandon"><span><%= referrals_count %></span> <%= words %> joined</p>
-    <% end %>
-    <p class="check brandon">Keep checking</p>
-    <a class="policy brandon" href="/privacy-policy" target="_blank">Privacy Policy</a>
   </div>
 </div>
