--- a/app/assets/stylesheets/_core.scss
+++ b/app/assets/stylesheets/_core.scss
@@ -252,58 +252,6 @@ body {
   text-align: center;
 }
 
-@media (max-width: $screen-md-max) {
-  #home {
-    min-width: 275px;
-    width: 100%;
-    margin: 0 auto;
-  }
-
-  #home .hero .flex-cont {
-    top: 2%;
-  }
-
-  #home .hero .small-wrap {
-    padding-bottom: 2%;
-  }
-}
-
-@media (max-width: $screen-sm-max) {
-  #home {
-    min-width: 275px;
-    width: 100%;
-    margin: 0 auto;
-  }
-
-  #home .hero .flex-cont {
-    top: 0%;
-  }
-
-  #home .hero .small-wrap {
-    padding-bottom: 2%;
-  }
-
-  #home .form-wrap .logo {
-    display: none;
-  }
-}
-
-@media (max-width: $screen-xs-max) {
-  #home {
-    min-width: 411px;
-    width: 100%;
-    margin: 0 auto;
-  }
-
-  #home .hero .flex-cont {
-    top: 0%;
-  }
-
-  #home .hero .small-wrap {
-    padding-bottom: 0%;
-  }
-}
-
 /* Refer a friend page */
 
 .wf-loading .brandon {
@@ -366,7 +314,6 @@ body {
   height: 80%;
   min-height: 470px;
   background: image-url("refer/mammoth.jpg") center center no-repeat;
-  background-size: cover;
   overflow: hidden;
   position: relative;
   letter-spacing: 0.09em;
@@ -400,7 +347,7 @@ body {
 
 #refer .share-wrap {
   float: right;
-  width: 400px;
+  max-width: 400px;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.13em;
@@ -435,7 +382,7 @@ body {
   border: 1px solid #d1d0c7;
   background: #fff;
   padding: 10px 0;
-  width: 320px;
+  max-width: 320px;
   text-transform: none;
   font-size: 11px;
   margin: 20px auto 0;
@@ -497,8 +444,8 @@ body {
 
 #refer .prizes .progress {
   height: 6px;
-  width: 90%;
-  margin: 0 5%;
+  width: 97%;
+  margin: 0 1.5%;
   background-color: #050026;
   border-radius: 3px;
   background-size: 1px 6px;
@@ -562,26 +509,16 @@ body {
   display: flex;
   flex-wrap: nowrap;
   // justify-content: space-between;
-  width: 90%;
-  margin: 20px 5%;
+  width: 97%;
+  margin: 20px 1.5%;
   position: relative;
   z-index: 1;
-}
-
-#refer .prizes .products li.title .friends {
-  margin-top: 7px;
-  letter-spacing: 2px;
-}
-
-#refer .prizes .products li.title .rewards {
-  margin-top: 45px;
-  letter-spacing: 2px;
 }
 
 #refer .prizes .products li.product {
   height: 100%;
   color: #050026;
-  width: 11%;
+  width: 11.1%;
   float: left;
   position: relative;
 }
@@ -601,6 +538,12 @@ body {
   font-size: 14px;
 }
 
+#refer .prizes .products li.product .stop_name {
+  margin: 0;
+  text-align: center;
+  font-size: 14px;
+}
+
 #refer .prizes .products li.product .sep {
   width: 100%;
   height: 4px;
@@ -615,32 +558,20 @@ body {
   margin: 13px auto 13px;
 }
 
-#refer .prizes .z li.product .caret {
-  width: 100%;
-  height: 10px;
-  background: image-url("refer/caret.png") center center no-repeat;
-  background-size: 16px 10px;
-  position: absolute;
-  bottom: -15px;
-}
-
 #refer .prizes .products li.product .description {
   display: none;
   color: #050026;
-  font-size: 14px;
+  font-size: 12px;
   text-align: center;
+  font-style: italic;
+  letter-spacing: -0.5px;
 }
 
 #refer .prizes .products li.product.selected .description {
   display: block;
   color: #f59228;
-  font-size: 14px;
+  font-size: 12px;
   text-align: center;
-}
-
-#refer .prizes .products li.product.selected .caret {
-  background: image-url("refer/caret-selected.png") center center no-repeat;
-  background-size: 16px 10px;
 }
 
 #refer .prizes .products li.product p {
@@ -698,4 +629,151 @@ body {
   margin-top: 5px;
   display: block;
   text-decoration: none;
+}
+
+@media (max-width: $screen-md-max) {
+  #home {
+    min-width: 275px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #home .hero .flex-cont {
+    top: 2%;
+  }
+
+  #home .hero .small-wrap {
+    padding-bottom: 2%;
+  }
+}
+
+@media (max-width: $screen-sm-max) {
+  #home {
+    min-width: 275px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #home .hero .flex-cont {
+    top: 0%;
+  }
+
+  #home .hero .small-wrap {
+    padding-bottom: 2%;
+  }
+
+  #home .form-wrap .logo {
+    display: none;
+  }
+
+  #refer .hero .share-wrap {
+    margin-right: 0;
+  }
+
+  #refer .hero {
+    min-height: 515px;
+  }
+}
+
+@media (max-width: $screen-xs-max) {
+  #home {
+    min-width: 411px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #home .hero .flex-cont {
+    top: 0%;
+  }
+
+  #home .hero .small-wrap {
+    padding-bottom: 0%;
+  }
+
+  #refer .hero {
+    min-height: 600px;
+  }
+
+  #refer .hero .share-wrap {
+    margin-right: 0;
+  }
+
+  #refer .hero .share-wrap .why {
+    font-size: 13px;
+  }
+
+  #refer .hero .share-wrap .title {
+    font-size: 30px;
+  }
+
+  #refer .hero .share-wrap .subtitle {
+    font-size: 12px;
+    letter-spacing: 0.5px;
+  }
+
+  #refer .share-wrap .copy-link {
+    border: 1px solid #d1d0c7;
+    background: #fff;
+    padding: 10px 0;
+    text-transform: none;
+    font-size: 11px;
+    margin: 20px auto 0;
+    border: 1px solid #1f4086;
+    border-radius: 3px;
+    color: #868282;
+  }
+
+  #refer .prizes ul.products {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    width: 97%;
+    margin: 20px 1.5%;
+    position: relative;
+    z-index: 1;
+  }
+
+  #refer .prizes .products li.product {
+    height: 125px;
+    width: 125px;
+    color: #050026;
+    float: left;
+    position: relative;
+  }
+
+  #refer .prizes .products li.product .circle {
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+    border: 1px solid #dad9d2;
+    text-align: center;
+    line-height: 38px;
+    vertical-align: middle;
+    color: #fff;
+    overflow: hidden;
+    background: #050026;
+    margin: 0 auto;
+    font-size: 14px;
+  }
+
+  #refer .prizes .products li.product .sep {
+    width: 100%;
+    height: 4px;
+    background-color: #050026;
+    position: absolute;
+    transform: rotate(90deg);
+    top: 45px;
+    right: -110px;
+  }
+
+  #refer .prizes .products li.product.selected .sep {
+    width: 100%;
+    height: 4px;
+    background-color: #f59228;
+    position: absolute;
+    transform: rotate(90deg);
+    top: 45px;
+    right: -110px;
+  }
 }
