--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Drylab 3 is coming!"/>
   <meta property="og:description" content="Say hello to a new standard. Say good bye to loosing overview and golden takes."/>
-  <meta property="og:image" content="<%= asset_path("refer/truman.png") %>"/>
+  <meta property="og:image" content="<%= asset_path("home/logo.png") %>"/>
   <meta property="og:url" content="<%= root_url %>"/>
   <meta property="og:description" content="Stay Curious. Create Better."/>
   <% if @is_mobile %>
