--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,9 @@
       </div>
       <div class="flex-item">
         <div class="ipad-mock">
-          <%=video_tag('landing_page_video_frameless.mp4', autoplay: true, loop: true, class: "video")%>
+          <iframe src="https://player.vimeo.com/video/252508823?autoplay=1&loop=1&loop=1&title=0&byline=0&portrait=0" width="360" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+          <!-- <%=video_tag(['landing_page_video_frameless.mp4', 'landing_page_video_frameless.ogg'], autoplay: true, loop: true, muted: true, controls: true, controlsList: "nofullscreen, nodownload", type: 'video/mp4', class: "video")%> -->
         </div>
       </div>
     </div>
