--- a/app/views/users/refer.html.erb
+++ b/app/views/users/refer.html.erb
@@ -69,7 +69,7 @@
     <% if referrals_count == 0 %>
       <p class="place brandon"><span>No</span> friends have joined...Yet!</p>
     <% else %>
-      <p class="place brandon"><span><%= referrals_count %></span> <%= words %> signed up - You have earned <span> <%= found["prize"] %> USD free use! </span></p>
+      <p class="place brandon"><span><%= referrals_count %></span> <%= words %> signed up</p>
     <% end %>
     <p class="callout brandon">So many people to tell, so little time</p>
     <ul class="products clearfix">
