--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,16 +11,15 @@
     <div class="flex-cont">
       <div class="flex-item">
         <p class="large brandon">Drylab 3 is coming!</p>
-        <div class="small-wrap">
-          <p class="small brandon">Decades of experience, distilled into our completely re-designed software.</p>
-          <p class="small brandon">Built especially for you independent film-makers, with limited resources, yet big visions.</p>
-          <p class="small brandon">No more lost takes or poor overview.</p>
-          <p class="small brandon">Just better creation. Anywhere.</p>
+        <div class="small-wrap" style="max-width: 30em;">
+          <p class="small brandon">Not for the dreamers, but for the creators. Decades of award winning experience in the Scandinavian wilderness, distilled into completely re-designed software. Built especially for independent film-makers with limited resources, yet big ambitions.</p>
+          <p class="small brandon">Set it up before production starts, and watch the dailies sync with almost no effort.</p>
+          <p class="small brandon">No more limited overview or lost takes. Just better creation. Anywhere.</p>
         </div>
       </div>
       <div class="flex-item">
         <div class="ipad-mock">
-          <iframe src="https://player.vimeo.com/video/252508823?autoplay=1&loop=1&loop=1&title=0&byline=0&portrait=0" width="360" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <iframe src="https://player.vimeo.com/video/252508823?autoplay=1&loop=1&loop=1&title=0&byline=0&portrait=0&background=1&muted=1" width="360" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
           <!-- <%=video_tag(['landing_page_video_frameless.mp4', 'landing_page_video_frameless.ogg'], autoplay: true, loop: true, muted: true, controls: true, controlsList: "nofullscreen, nodownload", type: 'video/mp4', class: "video")%> -->
         </div>
