Changes from Pontus

--- a/app/views/users/_campaign_ongoing.html.erb
+++ b/app/views/users/_campaign_ongoing.html.erb
@@ -1,5 +1,5 @@
 <div class="key"></div>
-<p class="byline brandon">Be the first to know</p>
+<p class="byline brandon">Be the first to try</p>
 <p class="policy brandon">
   By clicking the button below you agree with our
   <%= link_to 'privacy policy.', 'https://www.iubenda.com/privacy-policy/83565355', target: '_blank' %>
