--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,9 +12,9 @@
       <div class="flex-item">
         <p class="large brandon">Drylab 3 is coming!</p>
         <div class="small-wrap" style="max-width: 30em;">
-          <p class="small brandon">Not for the dreamers, but for the creators. Decades of award winning experience in the Scandinavian wilderness, distilled into completely re-designed software. Built especially for independent film-makers with limited resources, yet big ambitions.</p>
+          <p class="small brandon">Not for the dreamers, but for the creators. Decades of award-winning experience in the Scandinavian wilderness, distilled into completely re-designed software.<br/>Built especially for independent film-makers with limited resources, yet big ambitions.</p>
           <p class="small brandon">Set it up before production starts, and watch the dailies sync with almost no effort.</p>
-          <p class="small brandon">No more limited overview or lost takes. Just better creation. Anywhere.</p>
+          <p class="small brandon">No more limited overview or lost takes.<br/>Just better creation. Anywhere.</p>
         </div>
       </div>
       <div class="flex-item">
