More changes from Pontus

--- a/app/views/user_mailer/signup_email.html.erb
+++ b/app/views/user_mailer/signup_email.html.erb
@@ -1,7 +1,7 @@
 <h1>You'll be first to know when we launch.</h1>
 
 <p>
-  Film-making is evolving. Tell your friends and earn benefits.
+  Filmmaking is evolving. Tell your friends and earn benefits.
   Refer Friends, earn rewards.
 </p>
 
