--- a/app/views/user_mailer/signup_email_old.html.erb
+++ b/app/views/user_mailer/signup_email_old.html.erb
@@ -9,7 +9,7 @@
 </head>
 
 <body style="margin: 0; padding: 0;">
-  <span style='font-size: 0; line-height: 0; height: 0; width: 0;'>You'll be first to know when we launch. Film-making is evolving. Tell your friends and earn benefits.</span>
+  <span style='font-size: 0; line-height: 0; height: 0; width: 0;'>You'll be first to know when we launch. Filmmaking is evolving. Tell your friends and earn benefits.</span>
   <table width="100%" cellspacing='0' cellpadding='0' border="0" bgcolor="#ebebeb" style="background-color: #ebebeb; padding: 73px 15px; margin: 0;">
     <tr>
       <td align="center">
