--- a/app/views/user_mailer/signup_email.html.erb
+++ b/app/views/user_mailer/signup_email.html.erb
@@ -1,12 +1,11 @@
-<h1>You'll be first to know when we launch.</h1>
+<h1>You'll be first to get access when we launch</h1>
+
+<p>Don't leave your filmmaking friends behind.</p>
+<p>Share the early access.</p>
+<p>Share the link via e-mail, Snap, Insta, handwritten note, or other preferred media. Click Facebook, Twitter or LinkedIn below, or copy and paste the link; then track your influence.</p>
 
 <p>
-  Filmmaking is evolving. Tell your friends and earn benefits.
-  Refer Friends, earn rewards.
-</p>
-
-<p>
-  Your referral link
+  Share your referral link
   <%= link_to "#{root_url}?ref=#{@user.referral_code}", "#{root_url}?ref=#{@user.referral_code}", target: '_blank' %>
 </p>
 
