--- a/app/views/users/refer.html.erb
+++ b/app/views/users/refer.html.erb
@@ -19,7 +19,7 @@
     <div class="flex-item">
       <div class="share-wrap">
         <p class="why brandon">Don't leave your filmmaking friends behind</p>
-        <p class="title brandon">Share early access</p>
+        <p class="title brandon">Share the early access</p>
         <p class="subtitle brandon">Share the link via e-mail, Snap, Insta, handwritten note, or other preferred media. Press an icon or copy and paste the unique link, then track your influence.</p>
         <div class="copy-link brandon"><%= root_url %>?ref=<%= @user.referral_code %></div>
         <% twitter_message = "#Filmmaking is evolving. Excited for @drylab 3 to launch." %>
