--- a/app/views/users/_campaign_ongoing.html.erb
+++ b/app/views/users/_campaign_ongoing.html.erb
@@ -1,7 +1,8 @@
 <div class="key"></div>
 <p class="byline brandon">Be the first to try</p>
 <p class="policy brandon">
-  Enter your email to be the first to try, and to know when anything new happens.
+  Enter your email to be the first to try, and to know when anything new happens.<br/>
+  (We won't spam you, and will not share your email with anyone else.)
 </p>
 <div class='logo-image'>
   <%= image_tag('refer/logo.png') %>
