Changes after feedback from Pontus

--- a/app/views/user_mailer/signup_email.html.erb
+++ b/app/views/user_mailer/signup_email.html.erb
@@ -1,6 +1,6 @@
 <h1>You'll be first to get access when we launch</h1>
 
-<p>Don't leave your filmmaking friends behind.</p>
+<p>Now, don't leave your filmmaking friends behind:</p>
 <p>Share the early access.</p>
 <p>Share the link via e-mail, Snap, Insta, handwritten note, or other preferred media. Click Facebook, Twitter or LinkedIn below, or copy and paste the link; then track your influence.</p>
 
