--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Drylab 3 is coming!"/>
-  <meta property="og:description" content="#Filmmaking is evolving. Excited for @drylab 3 to launch."/>
+  <meta property="og:description" content="#Filmmaking is evolving. Excited for @drylab 3 to launch. Check it out: "/>
   <meta property="og:image" content="<%= asset_path("home/social.jpg") %>"/>
   <meta property="og:url" content="<%= root_url %>"/>
   <meta property="og:description" content="Stay Curious. Create Better."/>
