Fix meta headers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Drylab 3 is coming!"/>
   <meta property="og:description" content="#Filmmaking is evolving. Excited for @drylab 3 to launch. Check it out: "/>
-  <meta property="og:image" content="<%= asset_path("home/social.jpg") %>"/>
+  <meta property="og:image" content="<%= root_url %><%= asset_path("home/social.jpg") %>"/>
   <meta property="og:url" content="<%= root_url %>"/>
-  <meta property="og:description" content="Stay Curious. Create Better."/>
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= csrf_meta_tags %>
 </head>
