--- a/app/views/users/refer.html.erb
+++ b/app/views/users/refer.html.erb
@@ -22,7 +22,7 @@
         <p class="title brandon">Share the early access</p>
         <p class="subtitle brandon">Share the link via e-mail, Snap, Insta, handwritten note, or other preferred media. Press an icon or copy and paste the unique link, then track your influence.</p>
         <div class="copy-link brandon"><%= root_url %>?ref=<%= @user.referral_code %></div>
-        <% twitter_message = "#Filmmaking is evolving. Excited for @drylab 3 to launch. Check it out." %>
+        <% twitter_message = "#Filmmaking is evolving. Excited for @drylab 3 to launch. Check it out:" %>
         <div class="social-links">
           <a href="https://www.facebook.com/sharer/sharer.php?u=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&title=Drylab" class="fb" target="_blank"></a>
           <a href="https://twitter.com/share?url=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&text=<%= CGI::escape(twitter_message) %>" class="twit" target="_blank"></a>
