Promote to title: #Filmmaking is evolving

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
   <link rel="icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
   <link rel="shortcut icon" href="<%= asset_path('favicon.ico') %>" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:title" content="Drylab 3 is coming!"/>
-  <meta property="og:description" content="#Filmmaking is evolving. Excited for @drylab 3 to launch. Check it out: "/>
+  <meta property="og:title" content="#Filmmaking is evolving"/>
+  <meta property="og:description" content="Excited for @drylab 3 to launch. Check it out: "/>
   <meta property="og:image" content="<%= root_url %><%= asset_path("home/social.jpg") %>"/>
   <meta property="og:url" content="<%= root_url %>"/>
   <%= stylesheet_link_tag "application", :media => "all" %>
