Explicit phone links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,10 @@
 <%= yield %>
 
 <div style="clear: both; display: block; margin-top: 8em; margin-bottom: 2em; color: white; text-align: center;" class="small brandon">
-  Drylab R&amp;D AS · <a href="mailto:info@drylab.io">info@drylab.io</a> · +47 95 74 58 74‬ (Norway) · +1 (818) 748-9766‬ (USA) · <a href="https://drylab.zendesk.com" target="_blank">Knowledge base</a> · Gaustadalléen 21, 0349 Oslo, Norway
+  Drylab R&amp;D AS ·
+  <a href="mailto:info@drylab.io">info@drylab.io</a> ·
+  <a href="tel:+4795745874">+47 95 74 58 74‬</a>‬ (Norway) ·
+  <a href="tel:+18187489766">+1 818 748 9766</a>‬ (USA)
 </div>
 
 </body>
